--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           <div class="video-wrapper">
             <div class="video-container">
               <iframe
-                src="https://www.youtube.com/embed/oz4g-T5kuh0"
+                src="https://www.youtube.com/embed/GWw1bV60o2U"
                 title="Hướng dẫn cài đặt mod skin Free Fire"
                 allowfullscreen
               >
