--- a/index.html
+++ b/index.html
@@ -436,7 +436,8 @@
                     >
                   </div>
                   <a
-                    href="https://www.mediafire.com/file/b5xjtwd41lc8c05/AG+TOOL+V87_14.8.apk/file"
+                    href="https://www.mediafire.com/file/dlifdvuhga66hkv/AG+TOOL+V88_14.9.apk/file
+"
                     target="_blank"
                     class="btn btn-primary"
                   >
